--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   .image-container {
-    width: 23%;
+    width: 20%;
     padding-right: 15px;
 
     img {
@@ -24,6 +24,15 @@
 
   .quantity {
     padding-left: 20px;
+    display: flex;
+  }
+
+  .arrow {
+    cursor: pointer;
+  }
+
+  .value {
+    margin: 0px 10px;
   }
 
   .remove-button {
