--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -1,6 +1,7 @@
-.sign-in-and-sign-up {
+/* .sign-in-and-sign-up {
   display: flex;
   width: 850px;
   justify-content: space-between;
   margin: 30px auto;
 }
+ */
