Added High Order Spinner Component

--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -1,4 +1,4 @@
-.cart-icon {
+/* .cart-icon {
   width: 45px;
   height: 45px;
   position: relative;
@@ -19,3 +19,4 @@
     bottom: 10px;
   }
 }
+ */
