--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,4 +1,4 @@
-.checkout-item {
+/* .checkout-item {
   width: 100%;
   display: flex;
   min-height: 100px;
@@ -39,3 +39,4 @@
     cursor: pointer;
   }
 }
+ */
