--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -1,4 +1,4 @@
-$sub-color: grey;
+/* $sub-color: grey;
 $main-color: black;
 
 @mixin shrinkLabel {
@@ -52,3 +52,4 @@ $main-color: black;
     }
   }
 }
+ */
