--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,4 +1,4 @@
-.cart-dropdown {
+/* .cart-dropdown {
   position: absolute;
   width: 240px;
   height: 340px;
@@ -27,3 +27,4 @@
     margin-top: auto;
   }
 }
+ */
