--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,4 +1,4 @@
-.collection-item {
+/* .collection-item {
   width: 22vw;
   display: flex;
   flex-direction: column;
@@ -50,3 +50,4 @@
     }
   }
 }
+ */
