--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -1,6 +1,6 @@
-.directory-menu {
+/* .directory-menu {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
+} */
