--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,4 +1,4 @@
-.sign-in {
+/* .sign-in {
   width: 380px;
   display: flex;
   flex-direction: column;
@@ -10,5 +10,6 @@
   .buttons {
     display: flex;
     justify-content: space-between;
-  } 
+  }
 }
+ */
